# scamper-rs

./: 404.html  README.md  app-dc119fc37a1ac72c.js  app-dc119fc37a1ac72c_bg.wasm  brands.min-ca7664e26f5769cb.css  brands.min-e5ad9ab10af9a88a.css  bun.lockb  file-picker.css  fontawesome.min-787d918744c70c81.css  fs_worker.js  fs_worker_bg.wasm  ide-a97c8cda10b11aa0.css  ide-e63ea3978aff8eae.css  index.html  package.json  scamper-hljs-546f0991918b2e6c.css  scamper-hljs-a211795913fad44e.css  solid.min-d9ef37aacef7fc3e.css  solid.min-dc941f9e9971da1d.css  web-46c2bf9916cdb42f.js  web-46c2bf9916cdb42f_bg.wasm  web-9f7c50cc19b3138a.js  web-9f7c50cc19b3138a_bg.wasm
.github/workflows/: build.yml  deploy.yml
crates/docgen/: Cargo.toml
crates/docgen/src/: lib.rs  main.rs
crates/lang/: Cargo.toml
crates/lang/src/: lib.rs
crates/lang/src/ast/: mod.rs  number.rs  value.rs
crates/lang/src/ast/value/: function.rs  list.rs  mod.rs  number.rs
crates/lang/src/diagnostics/: codes.rs  error.rs  mod.rs
crates/lang/src/diagnostics/codes/: E0001.md
crates/lang/src/interpreter/: engine.rs  env.rs  error.rs  eval.rs  mod.rs
crates/lang/src/lexer/: mod.rs  tests.rs  token.rs
crates/lang/src/modules/: lab.rs  mod.rs  music.rs  prelude.rs
crates/lang/src/modules/image/: color.rs  color_names.rs  drawing.rs  mod.rs
crates/lang/src/parser/: keyword.rs  mod.rs  tests.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/repl/: Cargo.toml
crates/repl/src/: main.rs
crates/web/: .gitignore  Cargo.toml  index.html
crates/web/js/: index.ts
crates/web/js/codemirror/: language.ts  linter.ts
crates/web/js/webaudiofont/: webaudiofont.ts
crates/web/public/css/: docs.css  ide.css
crates/web/src/: bindings.rs  fs_worker.rs  lib.rs  main.rs
crates/web/src/components/: code_mirror.rs  docs.rs  filelist.rs  ide.rs  mod.rs
crates/web/src/components/render/: code_block.rs  drawing.rs  lab.rs  mod.rs  music.rs  value.rs
examples/: add.scm
snippets/web-67aca56aae793faf/public/js/: highlight.js
