[package]
name = "scamper-rs"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
bytecount = "0.6"
const_format = "0.2.33"
rand = "0.8.5"
scamper-macros = { path = "../macros" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
	"Window",
	"Document",
	"Element",
	"HtmlCanvasElement",
	"CanvasRenderingContext2d",
	"TextMetrics",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
font-kit = "0.11"
pathfinder_geometry = "0.5"
