[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
lazy_static = "1.5.0"
leptos = { version = "0.6.15", features = ["csr"] }
leptos_meta = { version = "0.6.15", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
scamper-rs = { path = "../lang" }
web-sys = { version = "0.3.72", features = [
	"Storage",
	"CanvasRenderingContext2d",
	"TextMetrics",
] }
