[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
lazy_static = "1.5.0"
leptos = { version = "0.6.15", features = ["csr"] }
leptos_meta = { version = "0.6.15", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
scamper-rs = { path = "../lang" }
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = [
	"Window",
	"Navigator",
	"StorageManager",
	"Storage",
	"CanvasRenderingContext2d",
	"TextMetrics",
	"FileSystemDirectoryHandle",
	"FileSystemFileHandle",
	"FileSystemHandle",
	"FileSystemGetFileOptions",
	"FileSystemWritableFileStream",
	"File",
] }
