[package]
name = "web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[[bin]]
name = "fs_worker"
path = "src/bin/fs_worker.rs"

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
gloo-worker = { version = "0.5.0", features = ["futures"] }
lazy_static = "1.5.0"
leptos = { version = "0.6.15", features = ["csr"] }
leptos_meta = { version = "0.6.15", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
pinned = "0.1.0"
scamper-rs = { path = "../lang" }
serde = { version = "1.0.214", features = ["derive"] }
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = [
	"Window",
	"Navigator",
	"StorageManager",
	"Storage",
	"CanvasRenderingContext2d",
	"TextMetrics",
	"FileSystemDirectoryHandle",
	"FileSystemFileHandle",
	"FileSystemHandle",
	"FileSystemGetFileOptions",
	"FileSystemSyncAccessHandle",
	"File",
	"BroadcastChannel",
	"EventListener",
	"WorkerNavigator",
] }
